# eval-dataset-generator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  build_report.json  coverage.html  docker-compose.yml  eval_set.json  pyproject.toml
app/: __init__.py  api.py  augment.py  cli.py  cluster.py  coverage.py  dataset.py  difficulty.py  embed.py  generate.py  ingest.py  label.py  llm.py  traffic.py
scripts/: plot_proof.py
tests/: test_generator.py
