[project]
name = "eval-dataset-generator"
version = "1.0.0"
description = "Generate coverage-balanced eval datasets from production traffic"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115","uvicorn[standard]>=0.30","httpx>=0.27","pydantic>=2","numpy>=1.26","scikit-learn>=1.3"]
[project.optional-dependencies]
dev = ["pytest>=8"]
[tool.setuptools]
packages = ["app"]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
